# OpenCV_3_Image_Subtraction_Cpp

./: .gitignore  Blob.cpp  Blob.h  CMakeLists.txt  README.md  main.cpp  readme.txt
